tests/neg/i7815.scala
trait A {
    val a: Int match { case Int => this } // error
}